<?xml version="1.0" encoding="UTF-8"?>
<project
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd"
	xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
	<modelVersion>4.0.0</modelVersion>

	<groupId>org.jboss.errai.demo</groupId>
	<artifactId>errai-summit-2013</artifactId>
	<version>1.0.0-SNAPSHOT</version>
	<packaging>war</packaging>
	<name>Demo::Errai Summit</name>

	<properties>
		<errai.version>3.0-SNAPSHOT</errai.version>
		<gwt.version>2.5.0</gwt.version>
		<slf4j.version>1.5.11</slf4j.version>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<javaee.version>3.0.1.Final</javaee.version>
	</properties>

	<dependencies>
		<dependency>
			<groupId>com.google.gwt</groupId>
			<artifactId>gwt-user</artifactId>
			<version>${gwt.version}</version>
			<scope>provided</scope>
		</dependency>
		<dependency>
			<groupId>org.jboss.errai</groupId>
			<artifactId>errai-javaee-all</artifactId>
			<version>${errai.version}</version>
		</dependency>
		<dependency>
			<groupId>org.jboss.errai</groupId>
			<artifactId>errai-cordova</artifactId>
			<version>${errai.version}</version>
		</dependency>
		<dependency>
			<groupId>org.jboss.spec</groupId>
			<artifactId>jboss-javaee-6.0</artifactId>
			<version>${javaee.version}</version>
			<type>pom</type>
			<scope>provided</scope>
		</dependency>

		<dependency>
			<groupId>junit</groupId>
			<artifactId>junit</artifactId>
			<version>4.10</version>
			<scope>test</scope>
		</dependency>
	</dependencies>

	<repositories>
		<repository>
			<id>JBOSS_NEXUS</id>
			<url>http://repository.jboss.org/nexus/content/groups/public</url>
		</repository>
	</repositories>

	<build>
		<finalName>${project.artifactId}-${project.version}</finalName>
		<outputDirectory>src/main/webapp/WEB-INF/classes</outputDirectory>

		<resources>
			<resource>
				<directory>src/main/java</directory>
			</resource>
			<resource>
				<directory>src/main/resources</directory>
			</resource>
		</resources>

		<pluginManagement>
			<plugins>
				<plugin>
					<groupId>org.eclipse.m2e</groupId>
					<artifactId>lifecycle-mapping</artifactId>
					<version>1.0.0</version>
					<configuration>
						<lifecycleMappingMetadata>
							<pluginExecutions>
								<pluginExecution>
									<pluginExecutionFilter>
										<groupId>org.codehaus.mojo</groupId>
										<artifactId>gwt-maven-plugin</artifactId>
										<versionRange>[2.4.0,)</versionRange>
										<goals>
											<goal>resources</goal>
										</goals>
									</pluginExecutionFilter>
									<action>
										<execute />
									</action>
								</pluginExecution>
								<pluginExecution>
									<pluginExecutionFilter>
										<groupId>org.jboss.errai</groupId>
										<artifactId>jacoco-gwt-maven-plugin</artifactId>
										<versionRange>[0.0,)</versionRange>
										<goals>
											<goal>prepare-agent</goal>
										</goals>
									</pluginExecutionFilter>
									<action>
										<ignore />
									</action>
								</pluginExecution>
							</pluginExecutions>
						</lifecycleMappingMetadata>
					</configuration>
				</plugin>
			</plugins>
		</pluginManagement>

		<plugins>
			<plugin>
				<groupId>org.codehaus.mojo</groupId>
				<artifactId>gwt-maven-plugin</artifactId>
				<version>${gwt.version}</version>
				<executions>
					<execution>
						<goals>
							<goal>resources</goal>
							<goal>compile</goal>
						</goals>
					</execution>
				</executions>
				<configuration>
					<extraJvmArgs>-Xmx712m -XX:CompileThreshold=7000 \
						-XX:MaxPermSize=128M</extraJvmArgs>
					<logLevel>INFO</logLevel>
					<noServer>true</noServer>
					<disableCastChecking>true</disableCastChecking>
					<runTarget>http://localhost:8080/errai-summit-2013</runTarget>
					<soyc>false</soyc>
					<webappDirectory>src/main/webapp</webappDirectory>
				</configuration>
			</plugin>
			<plugin>
				<artifactId>maven-clean-plugin</artifactId>
				<configuration>
					<filesets>
						<fileset>
							<directory>src/main/webapp</directory>
							<includes>
								<include>app/**</include>
							</includes>
						</fileset>
					</filesets>
				</configuration>
			</plugin>
			<plugin>
				<artifactId>maven-compiler-plugin</artifactId>
				<configuration>
					<source>1.6</source>
					<target>1.6</target>
				</configuration>
			</plugin>
		</plugins>
	</build>

	<profiles>
		<profile>
			<id>jboss7</id>
			<activation>
				<activeByDefault>true</activeByDefault>
			</activation>
			<build>
				<plugins>
					<plugin>
						<artifactId>maven-war-plugin</artifactId>
						<version>2.2</version>
						<configuration>
							<packagingExcludes>**/javax/**/*.*,**/client/local/**/*.class</packagingExcludes>
							<outputFileNameMapping>@{artifactId}@-@{baseVersion}@@{dashClassifier?}@.@{extension}@</outputFileNameMapping>
							<archive>
								<manifestEntries>
									<Dependencies>org.jboss.as.naming,org.jboss.as.server,org.jboss.msc</Dependencies>
								</manifestEntries>
							</archive>
						</configuration>
					</plugin>
					<plugin>
						<groupId>org.jboss.as.plugins</groupId>
						<artifactId>jboss-as-maven-plugin</artifactId>
						<version>7.1.1.Final</version>
						<extensions>false</extensions>
					</plugin>
				</plugins>
			</build>
			<dependencies>
				<dependency>
					<groupId>org.jboss.errai</groupId>
					<artifactId>errai-jboss-as-support</artifactId>
					<version>${errai.version}</version>
				</dependency>
			</dependencies>
		</profile>

		<profile>
			<id>mobile</id>
			<build>
				<plugins>
					<plugin>
						<groupId>org.jboss.errai</groupId>
						<artifactId>cordova-maven-plugin</artifactId>
						<version>3.0-SNAPSHOT</version>
						<executions>
							<execution>
								<id>build</id>
								<phase>package</phase>
								<goals>
									<goal>build-project</goal>
								</goals>
							</execution>
						</executions>
					</plugin>
				</plugins>
			</build>
			<pluginRepositories>
				<pluginRepository>
					<id>snapshots.jboss.org</id>
					<name>JBoss Snapshot Repository</name>
					<url>http://snapshots.jboss.org/maven2</url>
					<layout>default</layout>
					<snapshots>
						<enabled>true</enabled>
					</snapshots>
				</pluginRepository>
			</pluginRepositories>
		</profile>
	</profiles>
</project>